k3s/apps/base/frontend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: shared
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`shared.app.shuttle.sadra.xyz`)
      kind: Rule
      services:
        - name: frontend
          port: 80
  tls:
    certResolver: letsencrypt
